[package]
authors = ["hiaselhans"]
edition = "2021"
readme = "README.md"
name = "rp2040-project-template"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"

#embedded-hal  = "=1.0.0-alpha.6"
embedded-hal = { version = "0.2.6", features=["unproven"] }
embedded-time = "0.12.0"

# sqrt
#libm = "0.2.1"
num-traits = { version="0.2.14", default-features=false}
fixed = { version = "=1.10.0", features = ["az", "num-traits"] }
fixed-sqrt = "0.2.4"
typenum = "=1.14.0"
az = "1.1"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-semihosting = "0.5.6"

# We're using a Pico by default on this template
#rp-pico = "eh1_0_alpha"
rp-pico = "0.2.0"
# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.1.0"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.3.0", features=["eh1_0_alpha"]}
# rp2040-hal = { version="0.3.0", features=["rt"] }
# rp2040-boot2 = "0.2.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
